@@ -1,5 +1,12 @@
 2008-08-13  Martyn Russell  <martyn@imendio.com>
 
+	* src/tracker-utils/Makefile.am: Added GLib and GIO to the CFLAGS
+	and LDFLAGS.
+
+	* src/tracker-utils/tracker-tag.c: Refactored, fixed bugs, etc.
+
+2008-08-13  Martyn Russell  <martyn@imendio.com>
+
 	* src/tracker-utils/tracker-query.c: (get_meta_table_data):
 	* src/tracker-utils/tracker-search.c: (get_meta_table_data):
 	* src/tracker-utils/tracker-unique.c: (get_meta_table_data): Fix
